--- a/FigNex_Mobile/app/src/main/res/menu/bottom_nav_layout.xml
+++ b/FigNex_Mobile/app/src/main/res/menu/bottom_nav_layout.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/nav_library"
+        android:id="@+id/nav_home"
         android:icon="@drawable/home_24px"
         android:title="Trang chủ"
         app:showAsAction="ifRoom"/>
     <item
-        android:id="@+id/nav_canhan"
+        android:id="@+id/nav_user"
         android:icon="@drawable/ic_person"
         android:title="Người dùng"
         app:showAsAction="ifRoom"/>
