--- a/FigNex_Mobile/app/src/main/res/layout/login_frg.xml
+++ b/FigNex_Mobile/app/src/main/res/layout/login_frg.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/logo"
         android:layout_width="320dp"
-        android:layout_height="250dp"
+        android:layout_height="280dp"
         android:src="@drawable/img"
         android:contentDescription="Logo"
         android:layout_marginTop="32dp" />
@@ -21,7 +21,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Đăng ký"
+        android:text="Đăng nhập"
         android:textColor="#EF672D"
         android:textSize="44sp"
         android:textStyle="bold" />
@@ -50,23 +50,11 @@
         android:paddingHorizontal="16dp"
         android:textColor="#FFFFFF"
         android:textColorHint="#AAAAAA" />
-
-    <!-- Nhập lại mật khẩu -->
-    <EditText
-        android:id="@+id/re_password"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/bg_edittext"
-        android:hint="Nhập lại mật khẩu"
-        android:inputType="textPassword"
-        android:paddingHorizontal="16dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#AAAAAA" />
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" />
+
     <!-- Nút -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -82,18 +70,18 @@
             android:layout_marginEnd="8dp"
             android:layout_weight="1"
             android:background="@drawable/bg_button"
-            android:text="Đăng ký"
+            android:text="Đăng nhập"
+            android:textSize="18sp"
             android:textColor="#FFFFFF" />
     </LinearLayout>
-
     <!-- Đã có tài khoản? -->
     <TextView
         android:id="@+id/tv_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:text="Đã có tài khoản? Đăng nhập"
-        android:textSize="14sp"
+        android:text="Chưa có tài khoản? Đăng kí"
+        android:textSize="17sp"
         android:textColor="#FFFFFF" />
 
     <!-- Hoặc -->
