--- a/FigNex_Mobile/app/src/main/res/layout/m000_frg_splash.xml
+++ b/FigNex_Mobile/app/src/main/res/layout/m000_frg_splash.xml
@@ -10,6 +10,7 @@
         android:id="@+id/splashLogo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:src="@drawable/image"
-        android:scaleType="fitCenter"/>
+        android:scaleType="centerCrop"
+        android:adjustViewBounds="true"
+        android:contentDescription="fignex" />
 </LinearLayout>
