--- a/FigNex_Mobile/app/src/main/res/layout/m001_homepage_frg.xml
+++ b/FigNex_Mobile/app/src/main/res/layout/m001_homepage_frg.xml
@@ -32,21 +32,23 @@
                 android:layout_height="0dp"/>
 
             <ImageView
+                android:id="@+id/btnNoti"
                 android:layout_width="37dp"
                 android:layout_height="37dp"
                 android:src="@drawable/ic_notifications"
-                android:layout_marginStart="2dp"/>
+                android:layout_marginStart="7dp"/>
             <ImageView
+                android:id="@+id/btnDown"
                 android:layout_width="37dp"
                 android:layout_height="37dp"
                 android:src="@drawable/download_24px"
-                android:layout_marginStart="2dp"
+                android:layout_marginStart="7dp"
                 app:tint="#FFFFFF" />
             <ImageView
                 android:layout_width="37dp"
                 android:layout_height="37dp"
                 android:src="@drawable/ic_search"
-                android:layout_marginStart="2dp"
+                android:layout_marginStart="7dp"
                 app:tint="#FFFFFF" />
         </LinearLayout>
 
@@ -56,6 +58,7 @@
             android:layout_height="wrap_content"
             android:text="Thịnh hành"
             android:textColor="#FFFFFF"
+            android:layout_marginTop="10dp"
             android:textSize="25sp"
             android:textStyle="bold" />
 
@@ -79,7 +82,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerAnime"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="180dp"
             android:layout_marginTop="8dp"
             android:orientation="horizontal" />
 
@@ -100,5 +103,20 @@
             android:layout_marginTop="8dp"
             android:orientation="horizontal" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Phim Kinh dị"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycleKinhDi"
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
