--- a/FigNex_Mobile/app/src/main/res/layout/navigation_screen.xml
+++ b/FigNex_Mobile/app/src/main/res/layout/navigation_screen.xml
@@ -17,13 +17,13 @@
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        android:layout_height="70dp"
+        android:background="@color/black"
         app:menu="@menu/bottom_nav_layout"
         app:labelVisibilityMode="labeled"
         app:itemIconSize="35dp"
-        app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"
+        app:itemIconTint="@color/nav_item_color"
+        app:itemTextColor="@color/nav_item_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
