--- a/FigNex_Mobile/app/src/main/res/values/colors.xml
+++ b/FigNex_Mobile/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="orange">#EF672D</color>
 </resources>
